--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 # App environment
-VITE_PORT=3007
+PORT=3007
 
-# Cypress environment
-CYPRESS_BACKEND=http://localhost:3001
-CYPRESS_BASE_URL=http://localhost:3005
+# Backend
+BACKEND=http://localhost:3001
+
+# UI
+LOGGED_USER_KEY = 'loggedUser'
