--- a/package.json
+++ b/package.json
@@ -11,27 +11,28 @@
     "lint": "eslint --ext .js,.jsx --ignore-path .gitignore src ",
     "lint:fix": "eslint --ext .js,.jsx --ignore-path .gitignore --fix src",
     "test": "react-scripts test",
+    "test:watch": "react-scripts test --watchAll",
     "test:coverage": "react-scripts test --coverage",
     "test:e2e": "cypress run",
     "cypress:open": "cypress open"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "redux": "^4.2.1",
     "axios": "^1.1.3",
     "date-fns": "^2.29.3",
     "date-fns-tz": "^2.0.0",
-    "prop-types": "^15.8.1"
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
-    "cypress": "^12.8.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
+    "cypress": "^12.8.1",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-cypress": "^2.12.1",
