--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "deploy": "vite build && npx vercel ./dist --prod",
     "lint": "eslint --ext .js,.jsx --ignore-path .gitignore src ",
     "lint:fix": "eslint --ext .js,.jsx --ignore-path .gitignore --fix src",
-    "test": "react-scripts test",
-    "test:watch": "react-scripts test --watchAll",
+    "test": "jest --runInBand",
+    "test:watch": "jest --watchAll",
     "test:coverage": "react-scripts test --coverage",
     "test:e2e": "cypress run",
     "cypress:open": "cypress open"
@@ -26,18 +26,26 @@
     "redux": "^4.2.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.21.3",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.5.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
+    "babel-jest": "^29.5.0",
     "cypress": "^12.8.1",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-react": "^7.32.2",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "vite": "^4.2.0",
     "vite-plugin-eslint": "^1.8.1"
   },
