:sparkles: feat: port changing

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 # App environment
-PORT=3005
+PORT=3000
 
-# Cypress environment
-CYPRESS_BACKEND=http://localhost:3001
-CYPRESS_BASE_URL=http://localhost:3005
+# Backend
+BACKEND=http://localhost:3001
+
+# UI
+LOGGED_USER_KEY = 'loggedUser'
