--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "redux": "^4.2.1"
   },
   "devDependencies": {
@@ -46,6 +47,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
+    "redux-mock-store": "^1.5.4",
     "vite": "^4.2.0",
     "vite-plugin-eslint": "^1.8.1"
   },
